src/components/App/App.css
.header-content {
  text-align: center;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #173340;
  padding-bottom: 5%;
}

.nav-bar-content {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  background: none;
  margin-bottom: 10%;
}

.nav-button {
  width: 40vw;
  border: none;
  font-size: 1.3rem;
  background-color: #173340;
  padding: 0;
}

.header-copy {
  margin-bottom: 0;
  margin-top: 0;
  background: none;
}


@media only screen and (min-width: 768px) {
  .header-content {
    padding-top: 3%;
    padding-bottom: 3%;
  }

  .nav-bar-content {
    margin-bottom: 5%;
  }
}

